2005-01-06  Bruno Haible  <bruno@clisp.org>

	* quote.h: New file, from gnulib.
	* quote.c: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add quote.h, quote.c.
	* Makefile.msvc (OBJECTS): Add quote.obj.
	(quote.obj): New rule.
	* Makefile.vms (OBJECTS): Add quote.obj.
	(quote.obj): New rule.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* exitfail.h: New file, from gnulib.
	* exitfail.c: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add exitfail.h, exitfail.c.
	* Makefile.msvc (OBJECTS): Add exitfail.obj.
	(exitfail.obj): New rule.
	* Makefile.vms (OBJECTS): Add exitfail.obj.
	(exitfail.obj): New rule.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Remove getopt files.
	(LIBADD_SOURCE): Add getopt files here, except getopt.h.
	(BUILT_SOURCES, EXTRA_DIST, all-local, getopt.h): Support for getopt
	module.
	* getopt.h: Remove file.
	* getopt_.h: New file, from gnulib, with DLL_VARIABLE modifications.
	* getopt.c: Update from gnulib.
	* getopt1.c: Update from gnulib.
	* getopt_int.h: New file, from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* fnmatch_.h: Upgrade from gnulib.
	* fnmatch.c: Upgrade from gnulib.
	* fnmatch_loop.c: New file, from gnulib.
	* Makefile.am (DISTCLEANFILES): Remove fnmatch.h.
	(BUILT_SOURCES): New variable.
	(EXTRA_DIST): Add fnmatch_loop.c.
	* Makefile.vms (fnmatch.obj): Depend also on fnmatch_loop.c.

2004-12-19  Paul Eggert  <eggert@cs.ucla.edu>

	* alloca_.h: Conditionalize on _GNULIB_ALLOCA_H, not _ALLOCA_H.

2004-11-02  Bruno Haible  <bruno@clisp.org>

	* setenv.h (unsetenv): Define as a macro if the system's unsetenv()
	function returns void.

2004-10-04  Paul Eggert  <eggert@cs.ucla.edu>

	* unlocked-io.h: Don't worry about USE_UNLOCKED_IO; that's now
	the includer's responsibility.

2004-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* setenv.c: Import changes from coreutils.

2003-09-08  Paul Eggert  <eggert@twinsun.com>
